Initialisation du dépôt

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 			<li><a href="#">Accueil</a></li>
 			<li><a href="#">Nos recettes</a>
 				<ul class="menuRecettes">
-					<li><a href="mardi.html">Mardi</a></li>
-					<li><a href="mercredi.html">Mercredi</a></li>
-					<li><a href="jeudi.html">Jeudi</a></li>
-					<li><a href="vendredi.html">Vendredi</a></li>
-					<li><a href="samedi.html">Samedi</a></li>
-					<li><a href="dimanche.html">Dimanche</a></li>				
+					<li><a href="mardi.html" class="jour">Mardi</a></li>
+					<li><a href="mercredi.html" class="jour">Mercredi</a></li>
+					<li><a href="jeudi.html" class="jour">Jeudi</a></li>
+					<li><a href="vendredi.html" class="jour">Vendredi</a></li>
+					<li><a href="samedi.html" class="jour">Samedi</a></li>
+					<li><a href="dimanche.html" class="jour">Dimanche</a></li>				
 				</ul>  
 			</li>			
 			<li><a href="#">Fournisseurs</a></li>
