--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 				</ul>  
 			</li>			
 			<li><a href="#">Fournisseurs</a></li>
-			<li><a href="#">Réservation</a></li>
-			<li><a href="#">Livre d'or</a></li>		
+			<li><a href="reservation.html">Réservation</a></li>
+			<li><a href="livreDor.html">Livre d'or</a></li>		
 		</ul>	
 	<!--	<ul class="menuMobil">
 			<li><a href="#">Accueil</a></li>
