--- a/livreDor.html
+++ b/livreDor.html
@@ -52,7 +52,7 @@
 					<hr>					
 					<br>
 							
-					<form id="contact" action="/ma-page-de-traitement" method="post">
+					<form id="contact" action="js/envoiLivredor.php" method="post">
 					
 						<div class="form">
 							<label class="infoContact" for="name">Nom Prénom :</label>
